--- a/Projectpt1/ARTICULOS.resx
+++ b/Projectpt1/ARTICULOS.resx
@@ -138,7 +138,32 @@
   <metadata name="btnActualizar.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnActualizar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAF4SURBVDhPpZPLK0RhFMAnWZhkQVL8DRYyC7G1k5W9lbKx
+        QjGliaSQR5IFSRaEshZZSMpj5bFjwYbIY0FhN37O+dzvuo+ZMXf8Tqf7zZ3v/u45c+aLUSDPvDgrPwUJ
+        BxiilEr2OXDu/BJZOMiIPBQ3mUkaSTjJjCvLJs1beMZFSGazjCoOOTb78hZusBkSeVOlTzKqvIWjTIQk
+        3uwlafblFE4zyza7Zp0kFZLY7JO5W7IKx2QEurmHfufOD+NM+WS2MktGYYph94E6GlhgiUWWeZdopc39
+        zluZJST0yoK5xQ4V1Jh1sDKLTzjHPOVU+yTebKfDXDNVZvEJ62mkW7YXyd81LrUEhSXyulwyxRUecWIq
+        OOWca254kwhK/5IprrCTLvbkEFluuTOVRpEpRvghodP8krBccmXa1yHkK1OMcJV1aknwKm2qVCvV9hM0
+        mUFFwQibaTFtqVQr1fb1Ny2E2KMc6WI52ipdYY1Pif8QS5Pmngfn43+Bb1MgaNvKD8LzAAAAAElFTkSu
+        QmCC
+</value>
+  </data>
   <metadata name="btnEliminar.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <data name="btnEliminar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAEvSURBVDhP7ZS7jkFRFIbnSRRaFUoPgAdwqYnLAxAKnoFW
+        L/EIiJaQoNJ5BBKhcOm+OcteO7LnTM440858yZ+sf+29/mIna38QRLUK0airWk0Pvyc48H6H08mV9AJ4
+        Ba7XUKlALhdOMrPZaIgNPBwgEoHhEGazcJIZmT0en1EmcLGATOZZ/op0GubzZ2kCbzeIxaBchlYrnEol
+        M6tv+3rDywVGIxgM3le7DcmkmVVegcJuB4+HmjdYLn1P5QZms7BaqfHYbuF8VuMhtfQsPwbKoVyyFIsw
+        HqvxkFp6lv9A4c8H5vMwnarxkG3Y79V4SC09y2QChYIagxvY60G9ruYN5APu99UY3EBZ8Hgcmk2zhl8/
+        Vys5azQgkfCtqhsoXK/Q6UAq5f/+reSs2zV3HeATmRySrl2rC2AAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
