--- a/Projectpt1/AGENDAR.resx
+++ b/Projectpt1/AGENDAR.resx
@@ -139,6 +139,17 @@
     <value>True</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnEliminar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAAAS9JREFUOE/tlLuOQVEUhudJFFoVSg+AB3CpicsDEAqegVYv8QiIlpCg0nkEEqFw
+        6b45y147sudMzjjTznzJn6x/7b3+YidrfxBEtQrRqKtaTQ+/JzjwfofTyZX0AngFrtdQqUAuF04ys9lo
+        iA08HCASgeEQZrNwkhmZPR6fUSZwsYBM5ln+inQa5vNnaQJvN4jFoFyGViucSiUzq2/7esPLBUYjGAze
+        V7sNyaSZVV6Bwm4Hj4eaN1gufU/lBmazsFqp8dhu4XxW4yG19Cw/BsqhXLIUizAeq/GQWnqW/0Dhzwfm
+        8zCdqvGQbdjv1XhILT3LZAKFghqDG9jrQb2u5g3kA+731RjcQFnweByaTbOGXz9XKzlrNCCR8K2qGyhc
+        r9DpQCrl//6t5KzbNXcd4BOZHJKuXasLYAAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="btnAgregar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADwAAAA8CAYAAAA6/NlyAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
